--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "xntp"
 version = "0.1.0"
 edition = "2021"
 exclude = ["/ci/*"]
-description = "A Simple Ntp Client"
+description = "A ntp client lib for Rust"
 homepage = "https://github.com/XAnything/xntp"
 documentation = "https://docs.rs/xntp/"
 readme = "README.md"
