--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ documentation = "https://docs.rs/xntp/"
 readme = "README.md"
 keywords = [
     "ntp",
-    "simple ntp client",
+    "client",
 ]
 license = "MIT/Apache-2.0"
 repository = "https://github.com/XAnything/xntp"
