add anyhow dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ repository = "https://github.com/XAnything/xntp"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.69"
 byteorder = "1.4.3"
 chrono = "0.4.23"
